# Brainfuck-Interpreter

./: CMakeLists.txt  Display.cpp  calc.bf  cellsSize.bf  common.h  main.cpp  pi.bf  readme  tito.cpp
other/: other.cpp  papa.cpp
